--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "gsap": "^3.13.0",
     "jquery": "^3.7.1",
     "tailwindcss": "^4.1.7",
     "vue": "^3.5.13",
